add all prototype 2s

--- a/Exercise.ipynb
+++ b/Exercise.ipynb
@@ -787,8 +787,7 @@
     "            break\n",
     "        else:\n",
     "            finished_partitions.append(partition)\n",
-    "    return finished_partitions\n",
-    "\n"
+    "    return finished_partitions"
    ]
   },
   {
